--- a/map.css
+++ b/map.css
@@ -17,26 +17,124 @@ body {
 }
 
 #map svg {
-    /* background: yellow;
-    opacity: 50%; */
-    position: absolute;      
-    z-index: 1;              
-    width: 100%;            
-    height: 100%;
-    pointer-events: auto;
+  /* background: yellow;
+  opacity: 50%; */
+  position: absolute;      
+  z-index: 1;              
+  width: 100%;            
+  height: 100%;
+  pointer-events: none;
 }
 
 #map svg circle {
-    fill: steelblue;
-    fill-opacity: 0.6; 
-    stroke: white;
-    stroke-width: 1px;
-    pointer-events: auto;
+  --color-departures: steelblue;
+  --color-arrivals: darkorange;
+  --color: color-mix(
+    in oklch,
+    var(--color-departures) calc(100% * var(--departure-ratio)),
+    var(--color-arrivals)
+  );
+  fill: var(--color);
+  fill-opacity: 0.6; 
+  stroke: white;
+  stroke-width: 1px;
+  pointer-events: auto;
 }
+
+
 
 #map svg circle:hover {
     cursor: pointer;
 }
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 1rem;
+  font-family: sans-serif;
+}
+
+h1 {
+  font-size: 1.5rem;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.title {
+  font-weight: 700;
+}
+
+#slider-label {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  font-size: 0.9rem;
+}
+
+#time-slider {
+  width: 150px;
+}
+
+#selected-time {
+  display: none;
+  font-weight: bold;
+}
+
+#any-time {
+  color: #777;
+  font-style: italic;
+  font-size: 0.85rem;
+}
+
   
+svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+}
+
+/* legend */
+#map svg circle,
+.legend > div::before {
+  --color-departures: steelblue;
+  --color-arrivals: darkorange;
+  --color: color-mix(
+    in oklch,
+    var(--color-departures) calc(100% * var(--departure-ratio)),
+    var(--color-arrivals)
+  );
+  background-color: var(--color);
+}
+
+.legend {
+  display: flex;
+  gap: 2em;
+  align-items: center;
+  margin-block: 1em;
+  font-size: 0.95em;
+}
+
+.legend > div {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  font-weight: 500;
+}
+
+.legend > div::before {
+  content: "";
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: var(--color);
+}
+
   
   
